nav bar css, fixed flexboxs spacing across site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,15 +2,18 @@
 
 
 * {
-    margin: 0, 0;
     padding: 0;
-    border: none;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
 }
 
 body {
     font-family: Montserrat, sans-serif;
     font-weight: 300;
     color: #3a3a3a;
+    margin: 0;
 }
 
 h1 {
@@ -22,101 +25,173 @@ h1 {
 
 /* heading and logo styling */
 .trave-nav-logo {
-    width: 130px;
-    height: 60px;
-    float: left;
-    margin-left: 30px;
+    display: inline-block;
+    width: 100px;
+    height: 50px;
+    margin-top: 10px;
+    margin-left: 10px;
     padding: 5px;
+    background-image: url('./assets/images/trave-logo.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+
 }
 
 /* navigation links */
-
-.nav-bar {
-    background-color: #ccc;
+nav {
+    background: #2B3840;
+    height: 80px;
     width: 100%;
-    line-height: 75px;
-    font-size: 110%;
+    position: sticky;
     top: 0;
-    position: fixed;
-    z-index: 1;
 }
 
-.nav-bar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+label.logo {
+    color: white;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
 }
 
-.nav-bar li {
-    margin: 0;
-    padding: 0;
+nav ul {
     float: right;
-    margin-right: 30px;
-    list-style-type: none;
+    margin-right: 20px;
 }
 
-
-.nav-bar a {
-    text-decoration: none;
-    color: inherit;
+nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
 }
 
-.nav-bar a:hover {
-    border-bottom: 1px solid #3a3a3a;
+nav ul li a {
+    color: white;
+    font-size: 17px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
 }
 
-.active {
-    border-bottom: 1px solid #3a3a3a;
+a.active,
+a:hover {
+    background: #5E7EBF;
+    transition: .5s;
+}
+
+.checkbtn {
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#check {
+    display: none;
+}
+
+@media (max-width: 952px) {
+    label.logo {
+        font-size: 30px;
+        padding-left: 50px;
+    }
+
+    nav ul li a {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 858px) {
+    .checkbtn {
+        display: block;
+    }
+
+    ul {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+
+    nav ul li a {
+        font-size: 20px;
+    }
+
+    a:hover,
+    a.active {
+        background: none;
+        color: #0082e6;
+    }
+
+    #check:checked~ul {
+        left: 0;
+    }
+}
+
+section {
+    background: url(bg1.jpg) no-repeat;
+    background-size: cover;
+    height: calc(100vh - 80px);
 }
 
 /* hero image and cover text */
 .hero-flexbox {
-    margin-top: 100px;
     display: flex;
-    /* background-color: DodgerBlue; */
+    width: 100%;
+    flex-direction: row;
     justify-content: center;
-    background: url('../images/hero-image-cranes.png') no-repeat center center;
-
+    align-items: center;
+    background-image: url('../images/hero-image-cranes.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
 }
 
-.hero-flexbox>div {
-    /* background-color: #f1f1f1; */
+/* .hero-flexbox>div {
+    background-color: #f1f1f1;
     margin: 10px;
     padding: 20px;
     font-size: 30px;
-}
+} */
 
 .l-hero-div {
-    width: 60%;
-    height: 100%;
-    float: left;
+    width: 50%;
     text-align: left;
+    padding: 20px;
 }
 
-.l-hero-div h1 {
-    margin-left: 50px;
-    padding-left: 40px;
 
-}
 
-.l-hero-div h2,
-h5 {
-    margin-left: 50px;
-    padding-left: 40px;
+.l-hero-div h2 {
     font-size: 30px;
+    color: #2b2b2b;
+    text-align: justify;
+}
+
+.l-hero-div p {
     color: #2b2b2b;
     text-align: justify;
 }
 
 .r-hero-div {
     width: 50%;
-    height: 100%;
-    float: right;
 }
 
-.cover-text h2 {
-    flex: 1;
-    color: #fff;
+.r-hero-div img {
+    width: 70%;
 }
 
 .hero-image-background {
@@ -125,18 +200,20 @@ h5 {
 
 }
 
-.crane-img {
-    width: 90%;
-    height: 90%;
-    float: left;
-}
-
 
 
 /* challenges section styling */
 
-/* flexbox styling */
+.challenges-h2 {
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    font-size: 20px;
+    color: #2b2b2b;
+}
+
 .challenges-section {
+    height: auto;
     padding-top: 50px;
     padding-bottom: 50px;
     background-color: #1a1a27;
@@ -144,21 +221,52 @@ h5 {
 
 .challenges-flexbox {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin: 0 auto;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .challenges-flexbox div {
     width: 350px;
+    height: 350px;
     border-radius: 5%;
     background: #5454d4;
     margin: 10px;
     font-size: medium;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
-.l-ch-con {
+.challenge-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 20px;
+}
+
+.challenge-div img {
+    max-width: 100%;
+    height: auto;
+}
+
+.challenge-div h3 {
+    color: #ffffff;
+    font-size: 1.5em;
+    text-align: center;
+}
+
+.challenge-div p {
+    color: #ffffff;
+    font-size: 1em;
+    margin: 0.5em 0;
+}
+
+/* .l-ch-con {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -177,7 +285,7 @@ h5 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+} */
 
 .l-ch-con h3,
 .r-ch-con h3,
@@ -213,26 +321,24 @@ h5 {
 }
 
 .solution-section-header h2,
-p,
-h3 {
+.solution-section-header p,
+.solution-section-header h3 {
     color: #ffffff;
     text-align: center;
-    margin: 10px;
-}
-
-.solution-section-header p {
-    text-align: center;
-    margin: 10px;
+    margin: 15px;
 }
 
 .solution-sec-flexbox {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: flex-start;
+    margin: 25px;
+    text-align: center;
 }
 
 .solution-box-left,
 .solution-box-right {
+    color: #ffffff;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -303,15 +409,22 @@ h3 {
 .value-prop-flexbox {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     margin: 0 auto;
     align-items: center;
 }
 
 .value-prop-flexbox div {
     width: 100%;
+    height: 120px;
     padding: 20px;
     margin: 10px;
+}
+
+.value-prop-flexbox h3,
+.value-prop-flexbox p {
+    color: #fff;
+    width: 100%;
     font-size: medium;
 }
 
@@ -356,7 +469,8 @@ h3 {
 }
 
 footer {
-    background-color: #d6d6d6;
+    background: url('../images/hero-image-cranes.png') no-repeat center center;
+    /* background-color: #d6d6d6; */
     padding: 50px;
 }
 
